--- a/style.css
+++ b/style.css
@@ -76,8 +76,7 @@
     font-size: 8px;
   }
   .m2{
-    text-align: right;
-    padding-right: 20px;
+    text-align: center;
   }
   .heart {
     position: absolute;
